fixed alignment of button text on mobile

--- a/src/stylesheets/_cards.scss
+++ b/src/stylesheets/_cards.scss
@@ -157,6 +157,7 @@
         .btn-main {
           width: 100%;
           height: 40px;
+          line-height: 34px;
         }
       }
     }
